--- a/style.css
+++ b/style.css
@@ -3,8 +3,7 @@
 }
 
 #searchbar{
-    height: 43px;
-    width: 80%;
+    
     /* border-radius: 10px; */
     border: none;
     outline: none;
@@ -25,7 +24,7 @@
 .tab1{
 color: rgb(143, 34, 34);
 border-bottom: 5px solid rgb(143, 34, 34);
-background-color: whitesmoke;
+background-color: rgb(214, 213, 213);
 }
 .tab1:hover{
     cursor: pointer;
@@ -33,6 +32,7 @@ background-color: whitesmoke;
 .tab2{
     border-bottom: 1px solid black ;
     background-color: white;
+    color: gray;
 }
 .tab2:hover{
     cursor: pointer;
@@ -42,10 +42,11 @@ background-color: whitesmoke;
 }
 .head1,.head2,.head3,.head4,.head5,head{
     font-weight: bold;
+    color: black;
 }
-.data{
+/* .data{
     background-color: rgb(85, 142, 207);
-}
+} */
 .searchbtn{
     border: 1px solid white;
     color: white;
@@ -55,6 +56,72 @@ background-color: whitesmoke;
     color: white;
     background-color: thistle;
 }
-.side-image{
+/* .side-image{
     width: 50px;
+} */
+.prev,.next{
+    background-color: white;
+    font-weight: bold;
+}
+.data{
+    background-image: url('t2.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    color: rgb(255, 76, 5);
+    font-weight: bolder;
+}
+
+    
+
+@media(max-width:250px){
+    .head-image{
+        height: 150px;
+        width: 260px;
+    }
+    #searchbar{
+        height: 43px;
+    width: 45%;
+    }
+}
+@media(min-width:251px) and (max-width:500px){
+    .head-image{
+        height: 160px;
+        width: 280px;
+    }
+    #searchbar{
+        height: 43px;
+    width: 55%;
+    }
+}
+@media(min-width:501px) and (max-width:750px){
+    .head-image{
+        height: 180px;
+        width: 300px;
+    }
+    #searchbar{
+        height: 43px;
+    width: 65%;
+    }
+}
+@media(min-width:751px) and (max-width:1000px){
+    .head-image{
+        height: 200px;
+        width: 320px;
+    }
+    #searchbar{
+        height: 43px;
+    width: 75%;
+    }
+}
+@media(min-width:1001px){
+    .head-image{
+        height: 250px;
+        width: 400px;
+    }
+    #searchbar{
+        height: 43px;
+    width: 80%;
+    }
+    
 }
