--- a/style.css
+++ b/style.css
@@ -1,173 +1,170 @@
-#first{
-   align-items: center;
-}
-
 #searchbar{
     
-    /* border-radius: 10px; */
+    border-radius: 10px;
     border: none;
     outline: none;
     border-bottom: 2px solid black;
-    color: gray;
+    color: black;
     font-weight: bold;
     text-align: center;
     background-color: whitesmoke;
 }
 #searchbar:hover{
     cursor: pointer;
-    background-color: rgb(247, 252, 201);
+    background-color: rgb(209, 202, 202);
 }
+#searchbar:focus{
+    border:2px solid black;
+    background-color: rgb(209, 202, 202);
+}
+
 .fa-search{
     color: black;
     
 }
 .searchbtn{
-    background-color: rgb(247, 252, 201);
-}
-#searchbar:focus{
-    border:2px solid black;
-    background-color: rgb(247, 252, 201);
-}
-.tab1{
-color: rgb(143, 34, 34);
-border-bottom: 5px solid rgb(143, 34, 34);
-background-color: rgb(214, 213, 213);
-}
-.tab1:hover{
-    cursor: pointer;
-}
-.tab2{
-    border-bottom: 1px solid black ;
     background-color: white;
-    color: gray;
-}
-.tab2:hover{
-    cursor: pointer;
-}
-.head{
-    text-align: center;
-}
-.head1,.head2,.head3,.head4,.head5,head{
-    font-weight: bold;
-    color: gray;
-}
-/* .data{
-    background-color: rgb(85, 142, 207);
-} */
-.searchbtn{
-    border: 1px solid white;
-    color: white;
-    font-weight: bold;
+    border-radius: 10px;
 }
 .searchbtn:hover{
-    color: white;
-    background-color:rgb(247, 252, 201);
+    background-color: rgb(209, 202, 202);
 }
-/* .side-image{
-    width: 50px;
-} */
-.prev,.next{
-    background-color: white;
+.card{
+    display: inline-grid;
+    padding: 10px;
+    /* margin: 5%; */
+    text-align: center;
+    background-color: rgb(170, 115, 12);
+  
+}
+.card:hover{
+    background-color: rgb(88, 60, 8);
+}
+.title{
+    margin: 1%;
     font-weight: bold;
+    background-color: burlywood;
+    border-radius: 5px;
+    padding:1%;
+    margin-bottom: 10px;
 }
-.prev:hover , .next:hover{
-    background-color: rgb(247, 252, 201);
-    
-}
-.data{
-    background: linear-gradient(rgba(255,255,255,.6), rgba(255,255,255,.6)), url("t2.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    color: black;
-    font-weight: bolder;
-}
-
-.error{
-    background-color: rgb(241, 210, 163);
-    font-weight: bold;
-    padding: 5px;
+.content img{
     border-radius: 10px;
-    display: none;
 }
-
+.explanation{
+    color: gray;
+}
 @media(max-width:250px){
-    /* .head-image{
-        height: 150px;
-        width: 260px;
-    } */
+    
     #searchbar{
         height: 43px;
     width: 60%;
     }
-    .title{
-        font-size: 40px;
+    .head{
+        font-size: 25px;
+       }
+       .explanation{
+        font-size: 13px;
     }
-    .error{
-        width: 40%;
+    #confirm{
+        left: 10%;
     }
+
 }
 
 @media(min-width:251px) and (max-width:500px){
-    /* .head-image{
-        height: 160px;
-        width: 280px;
-    } */
+   
     #searchbar{
         height: 43px;
     width: 65%;
     }
-    .title{
-        font-size: 45px;
+  
+    .head{
+        font-size: 30px;
+       }
+   
+       .explanation{
+        font-size: 14px;
     }
-    .error{
-        width: 50%;
+    #confirm{
+        left: 10%;
     }
 }
 @media(min-width:501px) and (max-width:750px){
-    /* .head-image{
-        height: 180px;
-        width: 300px;
-    } */
+
     #searchbar{
         height: 43px;
     width: 70%;
     }
-    .title{
-        font-size: 55px;
+    .head{
+        font-size: 35px;
+       }
+   
+       .explanation{
+        font-size: 15px;
     }
-    .error{
-        width: 600%;
+    #confirm{
+        left: 20%;
     }
 }
 @media(min-width:751px) and (max-width:1000px){
-    /* .head-image{
-        height: 200px;
-        width: 320px;
-    } */
+   
     #searchbar{
         height: 43px;
     width: 75%;
     }
-    .title{
-        font-size: 75px;
-    }.error{
-        width: 70%;
+   
+    .head{
+        font-size: 40px;
+       }
+       .explanation{
+        font-size: 16px;
+    } #confirm{
+        left: 30%;
     }
 }
 @media(min-width:1001px){
-    /* .head-image{
-        height: 250px;
-        width: 400px;
-    } */
+    
     #searchbar{
         height: 43px;
     width: 80%;
     }
-    .title{
-        font-size: 95px;
-    }
-    .error{
-        width: 80%;
-    }
+   .head{
+    font-size: 50px;
+   }
+   .explanation{
+       font-size: 17px;
+   }
+   #confirm{
+       left: 40%;
+   }
 }
+
+
+
+#confirm {
+    display: none;
+    background-color: #F3F5F6;
+    color: #000000;
+    border: 1px solid #aaa;
+    position: fixed;
+    width: 300px;
+    height: 150px;
+    top: 1%;
+    box-sizing: border-box;
+    text-align: center;
+    border-radius: 10px;
+ }
+ #confirm button {
+    background-color: #ece92c;
+    display: inline-block;
+    border-radius: 12px;
+    border: 4px solid #aaa;
+    padding: 5px;
+    text-align: center;
+    width: 60px;
+    cursor: pointer;
+ }
+ #confirm .message {
+    text-align: center;
+ }
