--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ background-color: rgb(214, 213, 213);
         font-size: 55px;
     }
     .error{
-        width: 600%;
+        width: 60%;
     }
 }
 @media(min-width:751px) and (max-width:1000px){
@@ -170,4 +170,74 @@ background-color: rgb(214, 213, 213);
     .error{
         width: 80%;
     }
+}
+
+
+
+#confirm {
+    display: none;
+    /* background-color: rgb(194, 12, 12); */
+    background-color: white;
+    color: black;
+    border: 4px solid #aaa;
+    position: sticky;
+    width: 300px;
+    height: 180px;
+    top: 1%;
+    box-sizing: border-box;
+    text-align: justify;
+    border-radius: 10px;
+    word-spacing: 5px;
+    letter-spacing: 2px;
+    z-index: 99 ;
+ }
+ #confirm button {
+    background-color: black;
+    display: inline-block;
+    border-radius: 12px;
+    border: 4px solid #aaa;
+    padding: 5px;
+    text-align: center;
+    width: 60px;
+    cursor: pointer;
+    color: white;
+ }
+ #confirm .message {
+    text-align: center;
+ }
+
+ @media(max-width:250px){
+    
+    #confirm{
+        left: 10%;
+    }
+  
+
+}
+
+@media(min-width:251px) and (max-width:500px){
+   
+    #confirm{
+        left: 10%;
+    }
+}
+@media(min-width:501px) and (max-width:750px){
+
+    #confirm{
+        left: 20%;
+    }
+  
+}
+@media(min-width:751px) and (max-width:1000px){
+   #confirm{
+        left: 30%;
+    }
+    
+}
+@media(min-width:1001px){
+    
+   #confirm{
+       left: 40%;
+   }
+   
 }
