--- a/style.css
+++ b/style.css
@@ -31,14 +31,14 @@
 .tab1{
 color: rgb(143, 34, 34);
 border-bottom: 5px solid rgb(143, 34, 34);
-background-color: rgb(214, 213, 213);
+background-color: white
 }
 .tab1:hover{
     cursor: pointer;
 }
 .tab2{
     border-bottom: 1px solid black ;
-    background-color: white;
+    background-color: rgb(214, 213, 213);
     color: gray;
 }
 .tab2:hover{
@@ -177,8 +177,8 @@ background-color: rgb(214, 213, 213);
 #confirm {
     display: none;
     /* background-color: rgb(194, 12, 12); */
-    background-color: white;
-    color: black;
+    background-color: black;
+    color: white;
     border: 4px solid #aaa;
     position: sticky;
     width: 300px;
@@ -192,7 +192,7 @@ background-color: rgb(214, 213, 213);
     z-index: 99 ;
  }
  #confirm button {
-    background-color: black;
+    background-color: white;
     display: inline-block;
     border-radius: 12px;
     border: 4px solid #aaa;
@@ -200,7 +200,7 @@ background-color: rgb(214, 213, 213);
     text-align: center;
     width: 60px;
     cursor: pointer;
-    color: white;
+    color: black;
  }
  #confirm .message {
     text-align: center;
